Meal Plan List and Detail Pages. Basic Functionality Works

--- a/MealPlan/MealPlan/AppShell.xaml
+++ b/MealPlan/MealPlan/AppShell.xaml
@@ -87,6 +87,9 @@
     <FlyoutItem Title="New Plan" Icon="icon_about.png">
         <ShellContent Route="NewMealPlanPage" ContentTemplate="{DataTemplate local:NewMealPlanPage}" />
     </FlyoutItem>
+    <FlyoutItem Title="Select Plan" Icon="icon_about.png">
+        <ShellContent Route="MealPlanListPage" ContentTemplate="{DataTemplate local:MealPlanListPage}" />
+    </FlyoutItem>
 
 
 </Shell>
