--- a/MealPlan/MealPlan/Views/RecipeImagePage.xaml
+++ b/MealPlan/MealPlan/Views/RecipeImagePage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MealPlan.Views"
              xmlns:vm="clr-namespace:MealPlan.ViewModels"
+             Shell.PresentationMode="Modal"
              x:Class="MealPlan.Views.RecipeImagePage">
     <Shell.BackButtonBehavior>
         <BackButtonBehavior Command="{Binding GoBackCommand}"/>
